--- a/Lizzie/Base.lproj/Main.storyboard
+++ b/Lizzie/Base.lproj/Main.storyboard
@@ -294,21 +294,23 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="pS6-JN-u5o">
-                                <rect key="frame" x="0.0" y="30" width="375" height="562"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="28" translatesAutoresizingMaskIntoConstraints="NO" id="pS6-JN-u5o">
+                                <rect key="frame" x="0.0" y="30" width="375" height="617"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="aKz-2l-hid">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="30"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="18"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OyT-GX-x6S">
-                                                <rect key="frame" x="0.0" y="0.0" width="187.5" height="30"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="187.5" height="18"/>
+                                                <inset key="contentEdgeInsets" minX="-130" minY="0.0" maxX="0.0" maxY="0.0"/>
                                                 <state key="normal" title="   Back"/>
                                                 <connections>
                                                     <action selector="goBackToOneButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="WgY-jz-3wT"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xmk-99-zLM">
-                                                <rect key="frame" x="187.5" y="0.0" width="187.5" height="30"/>
+                                                <rect key="frame" x="187.5" y="0.0" width="187.5" height="18"/>
+                                                <inset key="contentEdgeInsets" minX="-187" minY="0.0" maxX="0.0" maxY="0.0"/>
                                                 <state key="normal" title="Upload"/>
                                                 <connections>
                                                     <action selector="sendBioSnapshot:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Vyf-VQ-WOo"/>
@@ -320,16 +322,10 @@
                                         </constraints>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="hcH-BK-DEQ">
-                                        <rect key="frame" x="0.0" y="40" width="375" height="75.5"/>
+                                        <rect key="frame" x="0.0" y="46" width="375" height="30"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name of Event" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4q5-Up-v2l">
-                                                <rect key="frame" x="20" y="0.0" width="335" height="20.5"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name of Event" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="N7K-nA-gcy">
-                                                <rect key="frame" x="20" y="45.5" width="335" height="30"/>
+                                                <rect key="frame" x="20" y="0.0" width="335" height="30"/>
                                                 <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
@@ -338,12 +334,10 @@
                                         <constraints>
                                             <constraint firstItem="N7K-nA-gcy" firstAttribute="leading" secondItem="hcH-BK-DEQ" secondAttribute="leading" constant="20" id="8a2-fj-bOZ"/>
                                             <constraint firstAttribute="trailing" secondItem="N7K-nA-gcy" secondAttribute="trailing" constant="20" id="aS9-Qm-pBJ"/>
-                                            <constraint firstAttribute="trailing" secondItem="4q5-Up-v2l" secondAttribute="trailing" constant="20" id="llR-3c-5EZ"/>
-                                            <constraint firstItem="4q5-Up-v2l" firstAttribute="leading" secondItem="hcH-BK-DEQ" secondAttribute="leading" constant="20" id="sOo-WC-PvK"/>
                                         </constraints>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="NoQ-HL-eQF">
-                                        <rect key="frame" x="20" y="125.5" width="335" height="20.5"/>
+                                        <rect key="frame" x="20" y="104" width="335" height="20.5"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="LeH-Ey-11a">
                                                 <rect key="frame" x="0.0" y="0.0" width="167.5" height="20.5"/>
@@ -374,20 +368,17 @@
                                         </subviews>
                                     </stackView>
                                     <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="zoF-KU-7vC">
-                                        <rect key="frame" x="18" y="156" width="339" height="31"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="30" id="KyC-Ky-xoM"/>
-                                        </constraints>
+                                        <rect key="frame" x="18" y="152.5" width="339" height="31"/>
                                         <connections>
                                             <action selector="eventDurationSliderChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="cJo-eB-U1S"/>
                                         </connections>
                                     </slider>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QWu-G5-gRf" customClass="LineChartView" customModule="Charts">
-                                        <rect key="frame" x="10" y="196" width="355" height="70"/>
+                                        <rect key="frame" x="10" y="210.5" width="355" height="76.5"/>
                                         <color key="backgroundColor" red="1" green="0.72469553313764035" blue="0.75450649487102506" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                     </view>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="xqq-sW-mlZ">
-                                        <rect key="frame" x="0.0" y="276" width="375" height="70"/>
+                                        <rect key="frame" x="0.0" y="315" width="375" height="70"/>
                                         <subviews>
                                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="vZV-EL-HuV">
                                                 <rect key="frame" x="18" y="0.0" width="339" height="31"/>
@@ -404,10 +395,10 @@
                                         </constraints>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="kOb-B6-Xlc" customClass="EmotionButtonsControl" customModule="Lizzie" customModuleProvider="target">
-                                        <rect key="frame" x="10" y="356" width="355" height="56"/>
+                                        <rect key="frame" x="10" y="413" width="355" height="36"/>
                                     </stackView>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="comments?" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="HSJ-Vm-MaH">
-                                        <rect key="frame" x="20" y="422" width="335" height="140"/>
+                                        <rect key="frame" x="20" y="477" width="335" height="140"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="140" id="Jsd-jT-Ghn"/>
@@ -420,19 +411,15 @@
                                     <constraint firstItem="xqq-sW-mlZ" firstAttribute="leading" secondItem="pS6-JN-u5o" secondAttribute="leading" id="1Bu-d3-Rq3"/>
                                     <constraint firstAttribute="trailing" secondItem="zoF-KU-7vC" secondAttribute="trailing" constant="20" id="1Ps-fG-I6u"/>
                                     <constraint firstItem="zoF-KU-7vC" firstAttribute="leading" secondItem="pS6-JN-u5o" secondAttribute="leading" constant="20" id="3xF-aS-Ube"/>
-                                    <constraint firstItem="kOb-B6-Xlc" firstAttribute="top" secondItem="pS6-JN-u5o" secondAttribute="top" constant="356" id="4q4-bN-agn"/>
+                                    <constraint firstItem="kOb-B6-Xlc" firstAttribute="top" secondItem="pS6-JN-u5o" secondAttribute="top" id="4q4-bN-agn"/>
                                     <constraint firstItem="QWu-G5-gRf" firstAttribute="leading" secondItem="pS6-JN-u5o" secondAttribute="leading" constant="10" id="7LO-db-lDG"/>
-                                    <constraint firstItem="QWu-G5-gRf" firstAttribute="top" secondItem="pS6-JN-u5o" secondAttribute="top" constant="196" id="8V7-TW-f39"/>
-                                    <constraint firstItem="HSJ-Vm-MaH" firstAttribute="top" secondItem="kOb-B6-Xlc" secondAttribute="bottom" constant="10" id="8dO-ol-ONN"/>
                                     <constraint firstAttribute="trailing" secondItem="aKz-2l-hid" secondAttribute="trailing" id="9S5-OX-wFp"/>
                                     <constraint firstAttribute="trailing" secondItem="hcH-BK-DEQ" secondAttribute="trailing" id="9k7-MR-1Ht"/>
-                                    <constraint firstAttribute="trailing" secondItem="NoQ-HL-eQF" secondAttribute="trailing" id="CgC-VF-YmU"/>
+                                    <constraint firstAttribute="trailing" secondItem="NoQ-HL-eQF" secondAttribute="trailing" constant="20" id="CgC-VF-YmU"/>
                                     <constraint firstAttribute="trailing" secondItem="HSJ-Vm-MaH" secondAttribute="trailing" constant="20" id="DeN-gB-AqZ"/>
                                     <constraint firstAttribute="trailing" secondItem="QWu-G5-gRf" secondAttribute="trailing" constant="10" id="Dr8-3P-I4G"/>
-                                    <constraint firstItem="QWu-G5-gRf" firstAttribute="top" secondItem="zoF-KU-7vC" secondAttribute="bottom" constant="10" id="Nl2-qR-4ZG"/>
                                     <constraint firstAttribute="trailing" secondItem="hcH-BK-DEQ" secondAttribute="trailing" id="OYj-sj-Rfi"/>
                                     <constraint firstItem="NoQ-HL-eQF" firstAttribute="leading" secondItem="pS6-JN-u5o" secondAttribute="leading" constant="20" id="Vbs-GZ-2oI"/>
-                                    <constraint firstItem="QWu-G5-gRf" firstAttribute="top" secondItem="zoF-KU-7vC" secondAttribute="bottom" constant="10" id="ZGr-OI-goy"/>
                                     <constraint firstItem="hcH-BK-DEQ" firstAttribute="leading" secondItem="pS6-JN-u5o" secondAttribute="leading" id="a0v-It-FHw"/>
                                     <constraint firstItem="QWu-G5-gRf" firstAttribute="leading" secondItem="kOb-B6-Xlc" secondAttribute="leading" id="eR0-qB-srv"/>
                                     <constraint firstItem="aKz-2l-hid" firstAttribute="leading" secondItem="pS6-JN-u5o" secondAttribute="leading" id="fuj-5H-tCd"/>
@@ -444,7 +431,7 @@
                         </subviews>
                         <color key="backgroundColor" red="0.76078431372549016" green="0.82352941176470584" blue="0.8784313725490196" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="5d9-BZ-wbb" firstAttribute="bottom" secondItem="pS6-JN-u5o" secondAttribute="bottom" constant="75" id="Fia-4c-Jzt"/>
+                            <constraint firstItem="5d9-BZ-wbb" firstAttribute="bottom" secondItem="pS6-JN-u5o" secondAttribute="bottom" constant="20" id="Fia-4c-Jzt"/>
                             <constraint firstItem="pS6-JN-u5o" firstAttribute="leading" secondItem="5d9-BZ-wbb" secondAttribute="leading" id="Oer-Xh-0lg"/>
                             <constraint firstItem="pS6-JN-u5o" firstAttribute="top" secondItem="5d9-BZ-wbb" secondAttribute="top" constant="10" id="X8n-Ye-7yW"/>
                             <constraint firstItem="5d9-BZ-wbb" firstAttribute="trailing" secondItem="pS6-JN-u5o" secondAttribute="trailing" id="jfE-S9-tOV"/>
@@ -455,7 +442,6 @@
                         <outlet property="eventDurationSlider" destination="zoF-KU-7vC" id="sWX-uN-vHj"/>
                         <outlet property="eventDurationTextLabel" destination="egH-qb-5gY" id="gn0-Bx-Zfo"/>
                         <outlet property="eventTextField" destination="N7K-nA-gcy" id="mwl-FC-srO"/>
-                        <outlet property="eventTextLabel" destination="4q5-Up-v2l" id="vO3-lO-4OH"/>
                         <outlet property="heartrateChart" destination="QWu-G5-gRf" id="uqe-E7-8hp"/>
                         <segue destination="trF-OB-Kz1" kind="unwind" identifier="unwindSegue2ToMainViewController" unwindAction="unwindEmotionViewWithSegue:" id="MVC-zg-mi5"/>
                     </connections>
